Fixing zoom effect for native selects on iPhone

--- a/css/tahiti-dropdown-select.css
+++ b/css/tahiti-dropdown-select.css
@@ -60,3 +60,12 @@ tahiti-dropdown-select {
 .tahiti-dropdown-select__control--large {
     width: 197px;
 }
+
+@media only screen and (max-width: 767px) {
+
+    .tahiti-dropdown-select__control,
+    .tahiti-dropdown-select__control--large {
+        font-size: 50px;
+    }
+
+}
